--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <link rel="icon" type="image/png" href="https://res.cloudinary.com/alexander-reyes/image/upload/v1702003175/pokemon_d6m42o.png">
   </head>
   <body>
     <div id="app"></div>
+
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
