:poop:feat(message): show a helper message when users type a pokemon that doesn't exist

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="icon" type="image/png" href="https://res.cloudinary.com/alexander-reyes/image/upload/v1702003175/pokemon_d6m42o.png">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      
+    </div>
 
 
     <script type="module" src="/main.js"></script>
